= RSpec Changelog

== Trunk

This release introduces #describe and #it as aliases for #context and #specify. This
allows you to express specs like this:

describe SomeClass do
  it "should do something" do
  end
end

* Added describe/it as aliases for context/specify - suggestion from Dan North.
* Applied [#7637] [PATCH] add skip-migration option to rspec_resource generator
* Added [#9167] string.should have_tag
* Changed script/rails_spec_server to script/spec_server and added script/spec (w/ path to vendor/plugins/rspec)
* Fixed [#8897] Error when mixing controller spec with/without integrated views and using template system other than rhtml
* Updated sample app specs to 0.8 syntax
* Updated generated specs to 0.8 syntax
* Applied [#8994] trunk: generated names for be_ specs (Multiple patches from Yurii Rashkovskii)

== Version 0.8.2

Replaced assert_select fork with an assert_select wrapper for have_tag. This means that "should have_rjs" no longer supports :hide or :effect, but you can still use should_have_rjs for those.

== Version 0.8.1

Quick "in house" bug-fix

== Version 0.8.0

This release introduces a new approach to handling expectations using Expression Matchers.

See Upgrade[http://rspec.rubyforge.org/upgrade.html], Spec::Expectations, Spec::Matchers and RELEASE-PLAN for more info.

This release also improves the spec command line by adding DRb support and making it possible to
store command line options in a file. This means a more flexible RSpec experience with Rails, 
Rake and editor plugins like TextMate.

It also sports myriad new features, bug fixes, patches and general goodness:

* Fixed [#8928] rspec_on_rails 0.8.0-RC1 controller tests make double call to setup_with_fixtures
* Fixed [#8925] Documentation bug in 0.8.0RC1 rspec website
* Applied [#8132] [PATCH] RSpec breaks "rake db:sessions:create" in a rails project that has the rspec_on_rails plugin (Patch from Erik Kastner)