@@ -2,7 +2,18 @@ module Kernel
   def context(type_or_description, &block)
     context_runner.add_context(Spec::Runner::Context.new(type_or_description.to_s, &block))
   end
-  alias :describe :context
+  
+  def alias_context_with(*args)
+    args.each do |arg|
+      Kernel.send :alias_method, arg, :context
+    end
+  end
+  
+  def alias_specify_with(*args)
+    args.each do |arg|
+      Spec::Runner::ContextEval::ModuleMethods.send :alias_method, arg, :specify
+    end
+  end
 
 private
 
@@ -15,3 +26,7 @@ private
     $context_runner
   end
 end
+
+alias_context_with :describe
+alias_specify_with :it
+
